--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Read & take notes"
           <div
             id="badgesWrap"
             class="grid"
-            style="grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 5px"
+            style="grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 5px; margin-bottom: 50px;"
           ></div>
         </div>
       </section>
